--- a/index.html
+++ b/index.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="shortcut icon" href="favicon.ico" />
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+</head>
+<body>
+
+<div id="start-screen" class="start overlay">
+    <div class="content">
+        <h2 class="heading">Arcade Game</h2>
+        <a id="play-game" class="button">Play Now!</a>
+        <img class="responsive" src="images/char-boy.png">
+    </div>
+</div>
+
+<div id="levelup" class="levelup overlay hidden"></div>
+<div id="dead" class="dead overlay hidden"></div>
+
+<div id="gameover" class="gameover overlay hidden">
+    <div class="content">
+        <h2 class="heading">Game Over</h2>
+        <div class="final-score">
+            Final Score: <span id="score"></span>
+        </div>
+        <a id="play-again" class="button">Play Again</a>
+        <img class="responsive" src="images/char-boy-dead.png">
+    </div>
+</div>
+
+<script src="js/engine.js"></script>
 </body>
 </html>
