--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
         <h2 class="heading">Arcade Game</h2>
         <a id="play-game" class="button">Play Now!</a>
-        <img class="responsive" src="images/char-boy.png">
+        <img class="responsive" src="images/char-boy.png" alt="Boy as an image of the player">
     </div>
 </div>
 
@@ -31,7 +31,7 @@
             Final Score: <span id="score"></span>
         </div>
         <a id="play-again" class="button">Play Again</a>
-        <img class="responsive" src="images/char-boy-dead.png">
+        <img class="responsive" src="images/char-boy-dead.png" alt="Dead boy means game is over">
     </div>
 </div>
 
